--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Asap:ital,wght@0,100..900;1,100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Asap:ital,wght@0,100..900;1,100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inconsolata:wght@200..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Asap:ital,wght@0,100..900;1,100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/index.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portifolio</title>
@@ -8,54 +18,63 @@
   <body>
     <header>
       <div class="container">
+        <div class="profile-container">
         <img class="profile-pic" src="assets/kevin.jpg" alt="Foto de perfil" />
+      </div>
         <div class="text-header">
-          <p>
-            Hello World! Meu nome é <span class="nome">Martina Santos</span> e
+          <p class="paragrafo-apresentação">
+            Hello World! Meu nome é <span class="nome">Kevin Lopes</span> e
             sou
           </p>
-          <h1>Desenvolvedora Fullstack</h1>
-          <p>
+          <h1>Desenvolvedor Fullstack</h1>
+          <p class="paragrafo-sobre-mim">
             Transformo necessidades em aplicações reais, envolventes e
-            funcionais. Desenvolvo sistemas através da minha paixão por
+            funcionais. Desenvolvo sistemas através da <br> minha paixão por
             tecnologia, contribuindo com soluções inovadoras e eficazes para
             desafios complexos.
           </p>
         </div>
-        <div class="techs-tags">
-          <a href="#" class="tags"
+        <div class="techs-tags ">
+          <a href="#" class="tags github"
             ><img src="assets/github-142-svgrepo-com (1).svg" alt="" />GitHub</a
           >
-          <a href="#" class="tags"
+          <a href="#" class="tags angular"
             ><img src="assets/icons8-angular (1).svg" alt="" />Angular</a
           >
-          <a href="#" class="tags"
+          <a href="#" class="tags typescript"
             ><img
               src="assets/typescript-svgrepo-com (1).svg"
               alt=""
             />TypeScript</a
           >
-          <a href="#" class="tags"
+          <a href="#" class="tags oracle"
             ><img src="assets/oracle-svgrepo-com (1).svg" alt="" />Oracle</a
           >
-          <a href="#" class="tags"
+          <a href="#" class="tags javascript"
             ><img
               src="assets/javascript-svgrepo-com (1).svg"
               alt=""
             />JavaScript</a
           >
-          <a href="#" class="tags"
+          <a href="#" class="tags react"
             ><img
               src="assets/react-javascript-js-framework-facebook-svgrepo-com (1).svg"
               alt=""
             />React</a
           >
-          <a href="#" class="tags"
+          <a href="#" class="tags node"
             ><img
               src="assets/nodejs-icon-svgrepo-com (1).svg"
               alt=""
             />NodeJs</a
           >
+
+          <a href="#" class="tags csharp"
+          ><img
+            src="assets/csharp-svgrepo-com (1).svg"
+            alt=""
+          />C#</a
+        >
         </div>
         <div class="icon-header">
           <img src="assets/Vector.png" alt="Vector" />
