--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -91,51 +91,63 @@
         <div class="projects-images">
           <div class="project-card">
             <img src="assets/Thumbnail_Project-01.png" alt="Travelgram" />
+            <div class="text-card">
             <h6>Travelgram</h6>
             <p>
               Rede social onde as pessoas mostram os registros de suas viagens
               pelo mundo
             </p>
           </div>
-          <div class="project-card">
-            <img src="assets/Thumbnail_Project-01.png" alt="Travelgram" />
-            <h6>Travelgram</h6>
-            <p>
-              Rede social onde as pessoas mostram os registros de suas viagens
-              pelo mundo
-            </p>
           </div>
           <div class="project-card">
             <img src="assets/Thumbnail_Project-01.png" alt="Travelgram" />
+            <div class="text-card">
             <h6>Travelgram</h6>
             <p>
               Rede social onde as pessoas mostram os registros de suas viagens
               pelo mundo
             </p>
+            </div>
           </div>
           <div class="project-card">
             <img src="assets/Thumbnail_Project-01.png" alt="Travelgram" />
+            <div class="text-card">
             <h6>Travelgram</h6>
             <p>
               Rede social onde as pessoas mostram os registros de suas viagens
               pelo mundo
             </p>
+            </div>
           </div>
           <div class="project-card">
             <img src="assets/Thumbnail_Project-01.png" alt="Travelgram" />
+            <div class="text-card">
             <h6>Travelgram</h6>
             <p>
               Rede social onde as pessoas mostram os registros de suas viagens
               pelo mundo
             </p>
+            </div>
           </div>
           <div class="project-card">
             <img src="assets/Thumbnail_Project-01.png" alt="Travelgram" />
+            <div class="text-card">
             <h6>Travelgram</h6>
             <p>
               Rede social onde as pessoas mostram os registros de suas viagens
               pelo mundo
             </p>
+            </div>
+          </div>
+          <div class="project-card">
+            <img src="assets/Thumbnail_Project-01.png" alt="Travelgram" />
+            <div class="text-card">
+            <h6>Travelgram</h6>
+            <p>
+              Rede social onde as pessoas mostram os registros de suas viagens
+              pelo mundo
+            </p>
+            </div>
           </div>
         </div>
       </section>
