--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -153,7 +153,7 @@
       </section>
 
       <section class="services">
-        <div class="footer-header">
+        <div class="services-header">
           <h5>Meus serviços</h5>
           <h3>Como posso ajudar o seu negócio</h3>
         </div>
@@ -181,6 +181,7 @@
       </section>
     </main>
     <footer>
+      <div class="footer">
       <div class="footer-header">
         <h5>Contato</h5>
         <h3>Gostou do meu trabalho? </h3>
@@ -188,17 +189,35 @@
       </div>
       <div class="social-midias">
         <div class="card-social-midias">
-          <a href="#"><img src="assets/linkdln.png" alt="LinkedIn"><span>LinkedIn</span><img src="assets/arrow.png" alt="arrow"></a>
+          <a href="#">
+            <div class="icon-text">
+              <img src="assets/linkdln.png" alt="LinkedIn" />
+              <span>LinkedIn</span>
+            </div>
+            <img src="assets/arrow.png" alt="arrow" class="arrow" />
+          </a>
         </div>
 
         <div class="card-social-midias">
-          <a href="#"><img src="assets/github.png" alt="GitHub"><span>GitHub</span><img src="assets/arrow.png" alt="arrow"></a>
+          <a href="#">
+            <div class="icon-text">
+              <img src="assets/github.png" alt="GitHub" />
+              <span>GitHub</span>
+            </div>
+            <img src="assets/arrow.png" alt="arrow" class="arrow" />
+          </a>
         </div>
 
         <div class="card-social-midias">
-          <a href="#"><img src="assets/email (5).png" alt="E-mail"><span>E-mail</span><img src="assets/arrow.png" alt="arrow"></a>
+          <a href="#">
+            <div class="icon-text">
+              <img src="assets/email certo.png" alt="Email" />
+              <span>Email</span>
+            </div>
+            <img src="assets/arrow.png" alt="arrow" class="arrow" />
+          </a>
         </div>
-
+      </div>
       </div>
     </footer>
   </body>
